dataset1235/2025-2/1153765216/users/4118477972/executions/3138746197_146336312.log
== SUBMISSION (2025-08-14 19:34:54)
-- CODE: 
numero = 50
print(numero)
numero = numero // 3 
print(numero)
numero = numero % 3
print(numero)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
1
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:42:10)
-- CODE: 
numero = 50
print(numero)
numero1 = numero//3 
print(numero1)
numero2 = numero%3
print(numero2)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:35:09)
-- CODE: 
numero = 50
print(numero)
numero = numero // 3 
print(numero)
numero = numero 3 %
print(numero)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 5
    numero = numero 3 %
                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 5
    numero = numero 3 %
                    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:36:33)
-- CODE: 
numero = 50
print(numero)
numero = numero//3 
print(numero)
numero = numero%3
print(numero)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
1
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:32:45)
-- CODE: 
numero = 50
print(numero)
numero = numero // 3 
print(numero)
numero = numero %
print(numero)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 5
    numero = numero %
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 5
    numero = numero %
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:36:05)
-- CODE: 
numero = 50
print(numero)
numero = numero//3 
print(numero)
numero = numero%3
print(numero)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
1
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:36:41)
-- CODE: 
numero = 50
print(numero)
numero = numero//3 
print(numero)
numero = numero%3
print(numero)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
1
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
